User manual: fix bib extrapolation

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -3144,7 +3144,7 @@ This framework remains relatively experimental.
 %------------------------------------------------------------
 \paragraph{\styleOption{-extrapolation} (default: disabled)}
 %------------------------------------------------------------
-Clock extrapolation was defined in a number of papers for timed automata (\eg{} \cite{BBFL03,BBLP06,Li09,Tripakis09}), and then extended to parametric timed automata in~\cite{AA22}.
+Clock extrapolation was defined in a number of papers for timed automata (\eg{} \cite{BBFL03,BBLP06,Li09,Tripakis09}), and then extended to parametric timed automata in~\cite{ALR15,AA22}.
 
 Values for this option are:
 
