--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -370,6 +370,27 @@
 	coreRank = {absent},
 }
 
+
+
+Mikołaj Bojańczyk, Sławomir Lasota and Igor Potapov
+@inproceedings{ALR15,
+	author    = {Andr{\'e}, {\'E}tienne and Lime, Didier and Roux, Olivier H.},
+	title     = {Integer-Complete Synthesis for Bounded Parametric Timed Automata},
+	booktitle = {Proceedings of the 9th International Workshop on Reachability Problems ({RP} 2015)},
+	SHORTbooktitle = {{RP}},
+	doi       = {10.1007/978-3-319-24537-9_2},
+	editor    = {Boja\'nczyk, Miko\l{}aj and Lasota, S\l{}awomir and Potapov, Igor},
+	eventdate = {2015-09-21/2015-09-23},
+	location  = {Warsaw, Poland},
+	month     = sep,
+	pages     = {7--19},
+	publisher = {Springer},
+	series    = {\LNCS{}},
+	volume    = {9328},
+	year      = {2015},
+	coreRank  = {absent},
+}
+
 @inproceedings{ALR16ICFEM,
 	author = {Andr{\'e}, {\'E}tienne and Lime, Didier and Roux, Olivier H.},
 	booktitle =		{Proceedings of the 18th International Conference on Formal Engineering Methods (ICFEM 2016)},
@@ -785,7 +806,7 @@
   	number =	{v3},
   	title =	{{\imitator{} Web page}},
   	url =	{https://www.imitator.fr},
-  	year =	{2021},
+  	year =	{2022},
 }
 
 
