--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -206,7 +206,7 @@ The initial state is defined by the part of the file following \styleIMI{init :=
 
 Since \imitator{} 3.1, the initial definition section is split between the \emph{discrete} initialization and the \emph{continuous} initialization (the latter being given in the form of a set of constraints).
 
-% This new section introduce a more powerful initialization system allowing initialization of discrete variables by constant expressions. It mean that it's possible to initialize any discrete variables of any type (proposed by \imitator{}) with an expression that can be resolved at compile time (use of variables is forbbiden). It's also the only way to initialize discrete integer and discrete boolean variables.
+% This new section introduce a more powerful initialization system allowing initialization of discrete variables by constant expressions. It mean that it is possible to initialize any discrete variables of any type (proposed by \imitator{}) with an expression that can be resolved at compile time (use of variables is forbbiden). It is also the only way to initialize discrete integer and discrete boolean variables.
 
 % Note the difference between constraints initializations and discrete variables initializations.
 % Disrete are initialized in the \styleIMI{continuous} part while other are initialized in the \styleIMI{discrete} part.
@@ -1275,9 +1275,9 @@ If you don't need these functionalities, we recommend the use the standard updat
 \paragraph{do bloc}
 
 \styleIMI{do} bloc can be used to make sequential updates on any discrete variables whatever their types.
-Contrary to \styleIMI{then} bloc (or standard update) it's possible to make in-place modifications on data structures (like stacks and queues) with side-effects functions.
+Contrary to \styleIMI{then} bloc (or standard update) it is possible to make in-place modifications on data structures (like stacks and queues) with side-effects functions.
 The \styleIMI{do} bloc can be seen as an imperative update part that is processed before the constraints updates (\styleIMI{then} bloc).
-It's not possible to update clock constraint in \styleIMI{do} bloc because of the sequential behavior.
+It is not possible to update clock constraint in \styleIMI{do} bloc because of the sequential behavior.
 
 % \paragraph{}
 Examples of a \styleIMI{do} update expression:
@@ -1331,7 +1331,7 @@ An example of a \styleIMI{then} update expression:
 		(* i will still be equal to 1 *)
 		i := i + 1;
 		(* below j = i, as initial value of i = 0 for this state, j = 0 *)
-		(* keep in mind that it's not a sequential update *)
+		(* keep in mind that it is not a sequential update *)
 		(* but an update based on the initial variable values of the current state *)
 		j := i
 
